# boksh

./: NEWS.rst  README.rst  RELEASE-VERSION  pyproject.toml  setup.py
boksh/: RELEASE-VERSION  __init__.py  boksh.py  bokshrc.json.sample  bookmark_menu.py  commands.py  tools.py
build_scripts/: version.py
