[tool.poetry]
name = "boksh"
version = "0.3.0"
description = ""
authors = ["Thomas chiroux <thomas@chiroux.org>"]

[tool.poetry.dependencies]
python = "^3.10"
urwid = "^2.1.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
"boksh" = "boksh.commands:main"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
